# Lab1PromC-

./: Documentation.md  Makefile.txt  lab1.hpp  lab1_test.cpp  lab1_with_wrapper.cpp  readme.md  wrapper.cpp  Документация.docx
HW1/include/array/: array.hpp
HW1/projects/array_wrapper/: CMakeLists.txt
HW1/testsuite/array/: array_test.py
HW1/testsuite/libsrc/array/: CMakeLists.txt
HW1/testsuite/libsrc/array/src/: test.cpp
HW1_2/: CMakeLists.txt
HW1_2/include/array/: array.hpp
HW1_2/projects/array_wrapper/src/: array_wrapper.cpp
HW1_2/testsuite/array/: array_test.py
HW1_2/testsuite/libsrc/array/src/: test.cpp
